--- a/machine/src/sass/style.sass
+++ b/machine/src/sass/style.sass
@@ -1,89 +1,195 @@
-
-.states
-  display: flex
-  align-items: center
-  gap: 2px
-  user-select: none
-  font-size: 1.5rem
-
-
-  *
-    font-size: 1.5rem
-    margin: 0
-    padding: 0
+body
+  width: 100vw
+  height: 100vh
+  margin: 0
+  background: linear-gradient( #cecdcd, #ffffff 90%)
+  #root
+    width: 100vw
+    height: 100vh
 
     
-  .input
+.app
+  width: calc(100% - 20px)
+  height: calc(100% - 20px)
+  display: flex
+  flex-direction: column
+  padding: 10px
+  .config-window
+    flex-grow: 1
     display: flex
-    align-items: flex-end
-    div
+    flex-direction: column
+    filter: drop-shadow(0 2px 1px #000000)
+    input
+      background: none 
+    .tab
       display: flex
-      align-items: flex-end
-      &:has(p)
-        margin-right: 0.5ch
-      &::after
-        content: ','
-        margin-right: 0.5ch
-      &:nth-last-child(2)
-        &::after
-          content: none
-        
-      &:last-of-type
-        &::after
-          content: none
-        &::before
-          content: ','
-          margin-right: 0.5ch
-        width: 0
-        visibility: hidden
-        margin: 0
-        &:has(input:focus)
-          width: auto
-          visibility: visible
-        input
-          &:focus
+      align-items: center
+      div
+        padding: 3px 5px
+        background: #fff
+        border: 1px solid
+        border-bottom: 0
+        border-right: 0
+        transition: .3s ease-in-out
+        display: flex
+        justify-content: center
+        align-items: center
+        &:last-of-type
+          border-right: 1px solid
+          border-radius: 0  10px  0  0
+        &:first-of-type
+          border-radius: 10px 0  0  0
+        button
+          overflow: hidden
+          transition: .3s ease-in-out
+          border: 0
+          outline: 0
+          padding: 0
+          display: flex
+          visibility: hidden
+          justify-content: center
+          align-items: center
+          width: 0
+          height: 3ch
+        &.active
+          &::before
+            content: "Машина"
+            margin-right: 1ch
+          background: #a3a3a3
+        &:hover
+          button
+            margin-left: 5px 
+            width: 3ch
+            padding: 1px
+            border-radius: 3px
+
             visibility: visible
+      >button
+        display: flex
+        justify-content: center
+        align-items: center
+        padding: 0
+        width: 3ch
+        height: 3ch
+        margin: 5px
+
+    .config
+      flex-grow: 1
+      border: 1px solid
+      padding: 10px
+      background: #fff
+      border-radius: 0 5px 5px 5px
+
+      main
+        display: grid
+        grid-template-columns: 1fr 1fr
+      .states
+        display: flex
+        align-items: center
+        gap: 2px
+        user-select: none
+        font-size: 1.5rem
+        
+
+        *
+          font-size: 1.5rem
+          margin: 0
+          padding: 0
+
+        .input
+          display: flex
+          align-items: flex-end
+          padding: 3px
+          div
+            display: flex
+            align-items: flex-end
+            &:has(input:focus)
+              &:last-of-type
+
+                &::before
+                  content: ","
+                  margin-right: 0.5ch
+              &:first-of-type
+                &::before
+                  content: none
+            &::after
+              content: ','
+              margin-right: 0.5ch
+            &:nth-last-child(2)
+              &::after
+                content: none
+
+            &:last-of-type
+              &::after
+                content: none
+
+              input
+                width: 0
+                &:focus
+                  visibility: visible
+                  padding: 1px 5px
+                  border: 1px solid
+                  box-shadow: 0 0 4px
+              p
+                margin-right: 0.5ch
+            &:first-child
+              &::before
+                content: none
+
+        input
+          text-align: center
+          padding: 0
+          border: 0
+          border-radius: 3px
+          outline: 0
+          transition: .1s ease
+          width: 1ch
+          &:focus
             padding: 1px 5px
             border: 1px solid
             box-shadow: 0 0 4px
-        p
-          margin-right: 0.5ch
-      &:first-child
-        &::before
-          content: none
 
-  input
-    text-align: center
-    padding: 0
-    border: 0
-    border-radius: 3px
-    outline: 0
-    transition: .1s ease
-    &:focus
-      padding: 1px 5px
-      border: 1px solid
+        &:hover
+          .input
+            div
+              width: auto
+
+              &:last-of-type
+                visibility: visible
+                &::before
+                  content: ","
+                  margin-right: 0.5ch
+                input
+                  padding: 1px 5px
+                  border: 1px solid
+              &:first-of-type
+                &::before
+                  content: none
+        &:has( > .input > div:nth-last-child(2) > input:focus)
+          .input
+            div
+              &:last-of-type
+                visibility: visible
+                width: auto
+                &::before
+                  content: ","
+                  margin-right: 0.5ch
+                input
+                  padding: 1px 5px
+                  border: 1px solid
+
+  .panel
+    margin-top: 50px
+    display: flex
+    flex-direction: column
+    >input
+      border: 0
+      background: #fff
+      outline: 0
       box-shadow: 0 0 4px
-
-  &:hover
-    .input
-      div
-        width: auto
-        &:last-of-type
-          visibility: visible
-          input
-            padding: 1px 5px
-            border: 1px solid
-  &:has( > .input > div:nth-last-child(2) > input:focus)
-    .input
-      div
-        &:last-of-type
-          visibility: visible
-          width: auto
-          input
-            padding: 1px 5px
-            border: 1px solid
-    
-    
+      border-radius: 5px
+      padding: 5px 0
+      text-align: center
 .rules
   display: flex
   flex-direction: column
@@ -99,34 +205,7 @@
       display: flex
       align-items: center
 
-      input
-        width: 1ch
-        border: 0
-        padding: 0
-        outline: 0
-        transition: .1s ease
-        &.error
-          animation: error 1s ease
-          padding: 2px 5px
-          border: 1px solid
-          border-radius: 3px
-          @keyframes error 
-            0%
-              outline: 0
-            20%
-              outline: 1px solid red
-            40%
-              outline: 0
-            60%
-              outline: 1px solid red
-            80%
-              outline: 0
-            
-          
-        &:placeholder-shown, &:focus
-          padding: 2px 5px
-          border: 1px solid
-          border-radius: 3px
+      
 
       .path
         display: flex
@@ -142,6 +221,33 @@
           &:last-of-type
             &::after
               content: ''
+          >input
+            width: 1ch
+            border: 0
+            padding: 0
+            outline: 0
+            transition: .1s ease
+            &.error
+              animation: error 1s ease
+              padding: 2px 5px
+              border: 1px solid
+              border-radius: 3px
+              @keyframes error
+                0%
+                  outline: 0
+                20%
+                  outline: 1px solid red
+                40%
+                  outline: 0
+                60%
+                  outline: 1px solid red
+                80%
+                  outline: 0
+
+            &:placeholder-shown, &:focus
+              padding: 2px 5px
+              border: 1px solid
+              border-radius: 3px
 
       .select
         display: flex
@@ -159,19 +265,20 @@
           border-radius: 3px
 
           input
+            border: 0
+            outline: 0
             background: #fff
             width: 2ch
-            text-align: start
-            padding: 2px 5px 2px 1px
+            text-align: center
             &.active
               background-color: red
+            &:focus
+              padding: 0
+              border: 0
+              border-radius: 0
         &:hover
           .options
             visibility: visible
 
-.app
-  .tab
-    .active
-      background: red
-
 @import table
+@import tape
