Дописана работа мышины тьюринга, но нормально не стоит головка при минус позициях

--- a/machine/src/sass/_table.sass
+++ b/machine/src/sass/_table.sass
@@ -72,6 +72,7 @@ td
       display: flex
       align-items: center
 
+
       input
         width: 1ch
         border: 0
@@ -109,6 +110,7 @@ td
             content: '⮕'
             margin: 0 1ch
         div
+          display: flex
           &::after
             content: ","
             margin-right: 0.5ch
